--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href=./css/hakushu.css>
-	<script type="text/javascript" src="./js/jquery-1.12.2.min.js"></script>
-	<script type="text/javascript" src="./js/hakushu.js"></script>
+	<link rel="stylesheet" type="text/css" href=hakushu.css>
+	<script type="text/javascript" src="jquery-1.12.2.min.js"></script>
+	<script type="text/javascript" src="hakushu.js"></script>
 	<title>シングルモルトウイスキー白州</title>
 </head>
 <body>
